--- a/Monitor/Monitor.vcxproj
+++ b/Monitor/Monitor.vcxproj
@@ -43,6 +43,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(ProjectDir)\sqlite3;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)sqlite3;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -58,6 +60,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -98,17 +101,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
+    <None Include="res\icons_large.bmp" />
+    <None Include="res\icons_small.bmp" />
     <None Include="res\Monitor.ico" />
     <None Include="res\Monitor.rc2" />
+    <None Include="res\tree_icons.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ADO\Ado.h" />
-    <ClInclude Include="ADO\AdoCommand.h" />
-    <ClInclude Include="ADO\AdoHelp.h" />
-    <ClInclude Include="ADO\AdoRecordSet.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="CxTip.h" />
+    <ClInclude Include="DlgParam.h" />
     <ClInclude Include="DlgView.h" />
+    <ClInclude Include="PageParam1.h" />
+    <ClInclude Include="PageParam2.h" />
     <ClInclude Include="ParamHelp.h" />
     <ClInclude Include="ModbusHelp.h" />
     <ClInclude Include="CHStrUtils.h" />
@@ -118,8 +123,12 @@
     <ClInclude Include="DlgDatabase.h" />
     <ClInclude Include="Monitor.h" />
     <ClInclude Include="DlgMain.h" />
+    <ClInclude Include="SheetParam.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="sqlite3\CppSQLite3U.h" />
+    <ClInclude Include="sqlite3\sqlite3.h" />
+    <ClInclude Include="SQLiteHelp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WorkFunc.h" />
@@ -127,17 +136,19 @@
     <ClInclude Include="WRPF.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ADO\Ado.cpp" />
-    <ClCompile Include="ADO\AdoCommand.cpp" />
-    <ClCompile Include="ADO\AdoHelp.cpp" />
-    <ClCompile Include="ADO\AdoRecordSet.cpp" />
+    <ClCompile Include="DlgParam.cpp" />
     <ClCompile Include="DlgView.cpp" />
+    <ClCompile Include="PageParam1.cpp" />
+    <ClCompile Include="PageParam2.cpp" />
     <ClCompile Include="ParamHelp.cpp" />
     <ClCompile Include="ModbusHelp.cpp" />
     <ClCompile Include="COM\ComModBus.cpp" />
     <ClCompile Include="DlgDatabase.cpp" />
     <ClCompile Include="Monitor.cpp" />
     <ClCompile Include="DlgMain.cpp" />
+    <ClCompile Include="SheetParam.cpp" />
+    <ClCompile Include="sqlite3\CppSQLite3U.cpp" />
+    <ClCompile Include="SQLiteHelp.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
