--- a/Monitor/Monitor.vcxproj
+++ b/Monitor/Monitor.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="SQLiteHelp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ThermoMeter.h" />
     <ClInclude Include="WorkFunc.h" />
     <ClInclude Include="WorkPool.h" />
     <ClInclude Include="WRPF.h" />
@@ -153,6 +154,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ThermoMeter.cpp" />
     <ClCompile Include="WorkFunc.cpp" />
     <ClCompile Include="WorkPool.cpp" />
     <ClCompile Include="WRPF.cpp" />
