--- a/Monitor/Monitor.vcxproj
+++ b/Monitor/Monitor.vcxproj
@@ -101,11 +101,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
-    <None Include="res\icons_large.bmp" />
-    <None Include="res\icons_small.bmp" />
     <None Include="res\Monitor.ico" />
     <None Include="res\Monitor.rc2" />
-    <None Include="res\tree_icons.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
@@ -131,7 +128,7 @@
     <ClInclude Include="SQLiteHelp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="ThermoMeter.h" />
+    <ClInclude Include="Meter.h" />
     <ClInclude Include="WorkFunc.h" />
     <ClInclude Include="WorkPool.h" />
     <ClInclude Include="WRPF.h" />
@@ -154,7 +151,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="ThermoMeter.cpp" />
+    <ClCompile Include="Meter.cpp" />
     <ClCompile Include="WorkFunc.cpp" />
     <ClCompile Include="WorkPool.cpp" />
     <ClCompile Include="WRPF.cpp" />
